[project]
name = "gonet-image-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.36.2",
    "botocore>=1.36.2",
    "numpy>=2.2.2",
    "picamraw>=1.2.64",
    "pillow>=11.1.0",
    "tifffile>=2025.1.10",
]
